--- a/src/app/shared/components/layouts/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layouts/layout-header/layout-header.component.html
@@ -1,31 +1,45 @@
 <!-- NOTE Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <div class="container-fluid px-5">
     <a class="navbar-brand" [routerLink]="['/dashboard']">
-      <img src="./assets/img/project/logo.svg" [alt]="appName + ' Logo'" class="img-fluid me-2"/>
-      {{ appName }}
+      <img src="./assets/img/project/logo.png" [alt]="appName + ' Logo'" class="img-fluid me-2"/>
+      <!-- {{ appName }} -->
     </a>
     <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" [ngbCollapse]="isMenuCollapsed" id="navbarSupportedContent">
-      <ul class="navbar-nav mb-2 mb-lg-0 w-100">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']">{{ 'HOME' | translate }}</a>
+        <li class="nav-item pe-5">
+          <a class="nav-link fw-bold" [routerLink]="['/home']" [routerLinkActive]="['active']">{{ 'EXPLORER_REWARD' | translate | uppercase }}</a>
         </li>
-
-        <li class="nav-item dropdown" ngbDropdown>
+        <li class="nav-item">
+          <a class="nav-link fw-bold" [routerLink]="['/home']" [routerLinkActive]="['active']">{{ 'BLIND_BID_ON_MEGA_REWARD' | translate | uppercase }}</a>
+        </li>
+        <!-- <li class="nav-item dropdown" ngbDropdown>
           <a class="nav-link dropdown-toggle" ngbDropdownToggle id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{ 'USER' | translate }}
           </a>
           <ul class="dropdown-menu dropdown-menu-end" ngbDropdownMenu aria-labelledby="navbarDropdown">
-            <!-- <li><a class="dropdown-item" [routerLink]="['/user']" [routerLinkActive]="['active']">{{ 'MY_ACCOUNT' | translate }}</a></li> -->
+            <li><a class="dropdown-item" [routerLink]="['/user']" [routerLinkActive]="['active']">{{ 'MY_ACCOUNT' | translate }}</a></li>
             <li><a class="dropdown-item cursor-pointer" (click)="onClickLogout()">{{ 'LOGOUT' | translate }}</a></li>
           </ul>
-        </li>
+        </li> -->
 
+      </ul>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 right-navbar">
+
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']"><fa-icon [icon]="faSearch"></fa-icon></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']"><fa-icon [icon]="faShoppingCart"></fa-icon></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/home']" [routerLinkActive]="['active']"><fa-icon [icon]="faCircleUser"></fa-icon></a>
+        </li>
       </ul>
     </div>
   </div>
