--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,15 +1,15 @@
 .top-panel {
-    height: 90vh;
-    width: 100%;
+    height  : 90vh;
+    width   : 100%;
     position: relative;
     overflow: hidden;
 
     .top-panel-backimg {
         position: absolute;
-        bottom: 0;
-        height: 130px;
-        width: 200vw;
-        left: -50%;
+        bottom  : 0;
+        height  : 130px;
+        width   : 200vw;
+        left    : -50%;
     }
 }
 
@@ -18,22 +18,22 @@
 }
 
 .three-ways-wrapper {
-    position: relative;
+    position        : relative;
     background-color: white;
 }
 
 .three-game-image {
-    position: absolute;
-    left: 50%;
-    bottom: 0;
+    position : absolute;
+    left     : 50%;
+    bottom   : 0;
     transform: translate(-50%, 0%);
-    width: 100%;
+    width    : 100%;
     max-width: 100%;
 }
 
 .new-reward-collection {
     background-color: black;
-    color: white;
+    color           : white;
 }
 
 // process panel
@@ -48,50 +48,56 @@
 
 // play to earn
 .play-to-earn {
-    height: 480px;
-    width: 100%;
+    height          : 480px;
+    width           : 100%;
     background-color: white;
 }
 
 .play-board {
-    height: 100%;
+    height          : 100%;
     background-color: black;
-    margin-left: 4rem !important;
-    margin-right: 4rem !important;
+    margin-left     : 4rem !important;
+    margin-right    : 4rem !important;
 }
 
 .playboard-coin-1 {
     position: absolute;
-    left: -3.5rem;
-    top: 40%;
-    width: 150px;
-    height: 150px;
+    left    : -3.5rem;
+    top     : 40%;
+    width   : 150px;
+    height  : 150px;
 }
 
 .playboard-coin-2 {
     position: absolute;
-    left: 4.5rem;
-    top: 4rem;
-    width: 140px;
-    height: 140px;
+    left    : 4.5rem;
+    top     : 4rem;
+    width   : 140px;
+    height  : 140px;
 }
 
 .playboard-coin-3 {
     position: absolute;
-    right: 0rem;
-    top: 45%;
-    width: 140px;
-    height: 140px;
+    right   : 0rem;
+    top     : 45%;
+    width   : 140px;
+    height  : 140px;
 }
 
 .release-business-panel {
-    height: 480px;
-    width: 100%;
+    height          : 480px;
+    width           : 100%;
     background-color: white;
 }
 
 .release-business-board {
-    height: 100%;
-    margin-left: 4rem !important;
+    height      : 100%;
+    margin-left : 4rem !important;
     margin-right: 4rem !important;
+}
+
+// top panel slide
+.slide-img {
+    width : 100%;
+    height: 100%;
 }
