finished top panel carousel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,6 +18,39 @@
           <image-button [text]="'play now'"></image-button>
         </div>
         <div class="carousel-wrapper">
+          <section id="slider">
+            <input type="radio" name="slider" id="s1">
+            <input type="radio" name="slider" id="s2">
+            <input type="radio" name="slider" id="s3" checked>
+            <input type="radio" name="slider" id="s4">
+            <input type="radio" name="slider" id="s5">
+            <label for="s1" id="slide1">
+              <div class="slider-image-wrapper">
+                <img src="assets/img/project/top-panel-carousel/1.png" />
+              </div>
+              
+            </label>
+            <label for="s2" id="slide2">
+              <div class="slider-image-wrapper">
+                <img src="assets/img/project/top-panel-carousel/2.png" />
+              </div>
+            </label>
+            <label for="s3" id="slide3">
+              <div class="slider-image-wrapper">
+                <img src="assets/img/project/top-panel-carousel/3.png" />
+              </div>
+            </label>
+            <label for="s4" id="slide4">
+              <div class="slider-image-wrapper">
+                <img src="assets/img/project/top-panel-carousel/4.png" />
+              </div>
+            </label>
+            <label for="s5" id="slide5">
+              <div class="slider-image-wrapper">
+                <img src="assets/img/project/top-panel-carousel/1.png" />
+              </div>
+            </label>
+          </section>
         </div>
       </div>
 
