--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,6 @@
 .top-panel {
-    height  : 90vh;
+    height: 810px;
+    min-height: 810px;
     width   : 100%;
     position: relative;
     overflow: hidden;
@@ -97,7 +98,89 @@
 }
 
 // top panel slide
-.slide-img {
-    width : 100%;
-    height: 100%;
+[type=radio] {
+    display: none;
+}
+
+#slider {
+    margin-top     : 100px;
+    margin-bottom  : 0px;
+    height         : 400px;
+    position       : relative;
+    perspective    : 1000px;
+    transform-style: preserve-3d;
+}
+
+#slider label {
+    margin       : auto;
+    width        : 300px;
+    height       : 350px;
+    border-radius: 10px;
+    position     : absolute;
+    left         : 0;
+    right        : 0;
+    cursor       : pointer;
+    transition   : transform 0.4s ease;
+    background-color: white;
+}
+
+#slider .slider-image-wrapper {
+    background: #a5fda5;
+    border-radius: 10px;
+    width: 270px;
+    height: 260px;
+    margin: auto;
+    margin-top: 15px;
+}
+#slider label img {
+    width: 85%;
+    // height: 85%;
+    position: absolute;
+    left: 50%;
+    top: 25%;
+    transform: translate(-50%, -50%);
+}
+#s1:checked~#slide4,
+#s2:checked~#slide5,
+#s3:checked~#slide1,
+#s4:checked~#slide2,
+#s5:checked~#slide3 {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+    transform : translate3d(-40vw, 0, -200px);
+}
+
+#s1:checked~#slide5,
+#s2:checked~#slide1,
+#s3:checked~#slide2,
+#s4:checked~#slide3,
+#s5:checked~#slide4 {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .3), 0 2px 2px 0 rgba(0, 0, 0, .2);
+    transform : translate3d(-20vw, 0, -100px);
+}
+
+#s1:checked~#slide1,
+#s2:checked~#slide2,
+#s3:checked~#slide3,
+#s4:checked~#slide4,
+#s5:checked~#slide5 {
+    box-shadow: 0 13px 25px 0 rgba(0, 0, 0, .3), 0 11px 7px 0 rgba(0, 0, 0, .19);
+    transform : translate3d(0, 0, 0);
+}
+
+#s1:checked~#slide2,
+#s2:checked~#slide3,
+#s3:checked~#slide4,
+#s4:checked~#slide5,
+#s5:checked~#slide1 {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .3), 0 2px 2px 0 rgba(0, 0, 0, .2);
+    transform : translate3d(20vw, 0, -100px);
+}
+
+#s1:checked~#slide3,
+#s2:checked~#slide4,
+#s3:checked~#slide5,
+#s4:checked~#slide1,
+#s5:checked~#slide2 {
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .37);
+    transform : translate3d(40vw, 0, -200px);
 }
