--- a/src/app/shared/components/process-card/process-card.component.scss
+++ b/src/app/shared/components/process-card/process-card.component.scss
@@ -3,3 +3,10 @@
         width: 4.8rem
     }
 }
+@media screen and (max-width: 768px){
+    .process-card-wrapper{
+        img {
+            width: 2.4rem
+        }
+    } 
+}
