added avatar and title on top panel carousel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,26 +28,120 @@
               <div class="slider-image-wrapper">
                 <img src="assets/img/project/top-panel-carousel/1.png" />
               </div>
-              
+              <div class="container d-flex text-break text-dark slider-card-footer my-auto">
+                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                </div>
+                <div class="col-6 px-2 my-auto">
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Free Caramel Macchiato for Life
+                  </p>
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Starbucks
+                  </p>
+                </div>
+                <div class="col-3 text-center p-0 mx-0 my-auto">
+                  <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
+                  <div class="d-grid gap-2 px-3">
+                    <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
+                  </div>
+                </div>
+              </div>
             </label>
             <label for="s2" id="slide2">
               <div class="slider-image-wrapper">
                 <img src="assets/img/project/top-panel-carousel/2.png" />
+              </div>
+              <div class="container d-flex text-break text-dark slider-card-footer my-auto">
+                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                </div>
+                <div class="col-6 px-2 my-auto">
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Free Caramel Macchiato for Life
+                  </p>
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Starbucks
+                  </p>
+                </div>
+                <div class="col-3 text-center p-0 mx-0 my-auto">
+                  <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
+                  <div class="d-grid gap-2 px-3">
+                    <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
+                  </div>
+                </div>
               </div>
             </label>
             <label for="s3" id="slide3">
               <div class="slider-image-wrapper">
                 <img src="assets/img/project/top-panel-carousel/3.png" />
               </div>
+              <div class="container d-flex text-break text-dark slider-card-footer my-auto">
+                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                </div>
+                <div class="col-6 px-2 my-auto">
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Free Caramel Macchiato for Life
+                  </p>
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Starbucks
+                  </p>
+                </div>
+                <div class="col-3 text-center p-0 mx-0 my-auto">
+                  <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
+                  <div class="d-grid gap-2 px-3">
+                    <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
+                  </div>
+                </div>
+              </div>
             </label>
             <label for="s4" id="slide4">
               <div class="slider-image-wrapper">
                 <img src="assets/img/project/top-panel-carousel/4.png" />
               </div>
+              <div class="container d-flex text-break text-dark slider-card-footer my-auto">
+                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                </div>
+                <div class="col-6 px-2 my-auto">
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Free Caramel Macchiato for Life
+                  </p>
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Starbucks
+                  </p>
+                </div>
+                <div class="col-3 text-center p-0 mx-0 my-auto">
+                  <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
+                  <div class="d-grid gap-2 px-3">
+                    <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
+                  </div>
+                </div>
+              </div>
             </label>
             <label for="s5" id="slide5">
               <div class="slider-image-wrapper">
                 <img src="assets/img/project/top-panel-carousel/1.png" />
+              </div>
+              <div class="container d-flex text-break text-dark slider-card-footer my-auto">
+                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                </div>
+                <div class="col-6 px-2 my-auto">
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Free Caramel Macchiato for Life
+                  </p>
+                  <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
+                    Starbucks
+                  </p>
+                </div>
+                <div class="col-3 text-center p-0 mx-0 my-auto">
+                  <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
+                  <div class="d-grid gap-2 px-3">
+                    <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
+                  </div>
+                </div>
               </div>
             </label>
           </section>
