--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -29,18 +29,18 @@
                 <img src="assets/img/project/top-panel-carousel/1.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
-                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                <div class="p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
                 </div>
-                <div class="col-6 px-2 my-auto">
+                <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
-                    Free Caramel Macchiato for Life
+                    Free IceCream for Life
                   </p>
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
                     Starbucks
                   </p>
                 </div>
-                <div class="col-3 text-center p-0 mx-0 my-auto">
+                <div class="text-center p-0 mx-0 my-auto">
                   <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
                   <div class="d-grid gap-2 px-3">
                     <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
@@ -53,18 +53,18 @@
                 <img src="assets/img/project/top-panel-carousel/2.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
-                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                <div class="p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
                 </div>
-                <div class="col-6 px-2 my-auto">
+                <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
-                    Free Caramel Macchiato for Life
+                    Free IceCream for Life
                   </p>
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
                     Starbucks
                   </p>
                 </div>
-                <div class="col-3 text-center p-0 mx-0 my-auto">
+                <div class="text-center p-0 mx-0 my-auto">
                   <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
                   <div class="d-grid gap-2 px-3">
                     <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
@@ -77,18 +77,18 @@
                 <img src="assets/img/project/top-panel-carousel/3.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
-                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                <div class="p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
                 </div>
-                <div class="col-6 px-2 my-auto">
+                <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
-                    Free Caramel Macchiato for Life
+                    Free IceCream for Life
                   </p>
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
                     Starbucks
                   </p>
                 </div>
-                <div class="col-3 text-center p-0 mx-0 my-auto">
+                <div class="text-center p-0 mx-0 my-auto">
                   <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
                   <div class="d-grid gap-2 px-3">
                     <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
@@ -101,18 +101,18 @@
                 <img src="assets/img/project/top-panel-carousel/4.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
-                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                <div class="p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
                 </div>
-                <div class="col-6 px-2 my-auto">
+                <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
-                    Free Caramel Macchiato for Life
+                    Free IceCream for Life
                   </p>
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
                     Starbucks
                   </p>
                 </div>
-                <div class="col-3 text-center p-0 mx-0 my-auto">
+                <div class="text-center p-0 mx-0 my-auto">
                   <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
                   <div class="d-grid gap-2 px-3">
                     <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
@@ -125,18 +125,18 @@
                 <img src="assets/img/project/top-panel-carousel/1.png" />
               </div>
               <div class="container d-flex text-break text-dark slider-card-footer my-auto">
-                <div class="col-3 p-0 mx-0 text-center position-relative my-auto">
-                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="64" height="64" class="rounded-circle" />
+                <div class="p-0 mx-0 text-center position-relative my-auto">
+                  <img src="assets/img/project/top-panel-carousel/avatar1.png" width="48" height="48" class="rounded-circle" />
                 </div>
-                <div class="col-6 px-2 my-auto">
+                <div class="px-2 my-auto me-auto">
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
-                    Free Caramel Macchiato for Life
+                    Free IceCream for Life
                   </p>
                   <p class="text-break fw-bold mb-0" [style.font-size]="'12px'">
                     Starbucks
                   </p>
                 </div>
-                <div class="col-3 text-center p-0 mx-0 my-auto">
+                <div class="text-center p-0 mx-0 my-auto">
                   <div class="fw-800" [style.font-size]="'8px'">Draw Fee</div>
                   <div class="d-grid gap-2 px-3">
                     <div class="btn btn-outline-warning btn-sm" [style.font-size]="'10px'">50$</div>
