--- a/src/app/shared/components/image-button/image-button.component.scss
+++ b/src/app/shared/components/image-button/image-button.component.scss
@@ -20,7 +20,7 @@
         cursor: pointer;
         width: 100%;
         text-shadow: 1px 1px 2px black;
-        -webkit-text-stroke: 1.2px black;
-        letter-spacing: 1px;
+        -webkit-text-stroke: 1px rgb(57, 57, 57);
+        font-family: app_font!important;
     }
 }
