--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -80,33 +80,99 @@
 // @import 'modules/_bootstrap.scss';
 body {
     background-color: black;
-    color: white;
-    word-break: break-all!important;
-    
+    color           : white;
+    word-break      : break-all !important;
+
 }
+
 // scroll 
 .drag-scroll-content {
-    overflow: hidden!important;
+    overflow: hidden !important;
 }
+
 // font-weight
 .fw-900 {
-    font-weight: 900!important;
+    font-weight: 900 !important;
 }
+
 .fw-800 {
-    font-weight: 800!important;
+    font-weight: 800 !important;
 }
+
 .fw-700 {
-    font-weight: 700!important;
+    font-weight: 700 !important;
 }
+
 .fw-600 {
-    font-weight: 600!important;
+    font-weight: 600 !important;
 }
+
 .fw-500 {
-    font-weight: 500!important;
+    font-weight: 500 !important;
 }
+
 .text-break {
-    white-space: initial!important;
-    text-align: left;
+    white-space: initial !important;
+    text-align : left;
 }
 
 
+
+// scratch card 
+#js--sc--container {
+    // max-width: 300px;
+    width    : 100%;
+    // height: 300px;
+    margin   : auto;
+    position : relative;
+
+    img {
+        width     : 90%;
+        height    : 90%;
+        position  : absolute;
+        left      : 50%;
+        top       : 50%;
+        transform : translate(-50%, -50%);
+        object-fit: fill;
+    }
+
+    canvas {
+        position     : absolute;
+        top          : 0px;
+        left         : 0px;
+        z-index      : 99;
+        border-radius: 5px;
+    }
+
+    .cardamountcss {
+        z-index  : 9;
+        top      : 50%;
+        left     : 50%;
+        transform: translate(-50%, -50%);
+        position : absolute;
+
+        .won-amnt {
+            font-size: 5em;
+            color    : #424242;
+        }
+
+        .won-text {
+            font-size: 4em;
+            color    : #424242;
+        }
+    }
+
+    .sc__inner {
+        background-color: #ffffff;
+        height          : 100%;
+        width           : 100%;
+        border-radius   : 5px;
+        // border: 1px solid #26005f;
+    }
+}
+
+
+@font-face {
+    font-family: app_font;
+    src        : url('../fonts/Gotham-Font/Gotham-Black.otf');
+}
