--- a/src/app/shared/components/layouts/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layouts/layout-header/layout-header.component.html
@@ -1,7 +1,7 @@
 <!-- NOTE Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid px-5">
-    <a class="navbar-brand" [routerLink]="['/dashboard']">
+    <a class="navbar-brand" [routerLink]="['/']">
       <img src="./assets/img/project/logo.png" [alt]="appName + ' Logo'" class="img-fluid me-2"/>
       <!-- {{ appName }} -->
     </a>
