--- a/src/app/shared/components/process-card/process-card.component.scss
+++ b/src/app/shared/components/process-card/process-card.component.scss
@@ -6,7 +6,25 @@
 @media screen and (max-width: 768px){
     .process-card-wrapper{
         img {
-            width: 2.4rem
+            width: 4.8rem
         }
     } 
+}
+
+.process-number {
+    font-family: app_font!important;
+    font-size: 150px!important;
+    line-height: 0.9;
+    position: absolute;
+    left: -0.7rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #f5f5f5!important;
+}
+
+.process-image {
+    position: absolute;
+    right: -2rem;
+    top: 50%;
+    transform: translateY(-50%);
 }
