--- a/src/app/shared/components/layouts/layout-header/layout-header.component.html
+++ b/src/app/shared/components/layouts/layout-header/layout-header.component.html
@@ -1,5 +1,5 @@
 <!-- NOTE Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-lg" [ngClass]="theme == 'light' ? 'navbar-light' : 'navbar-dark'">
   <div class="container-fluid px-5">
     <a class="navbar-brand" [routerLink]="['/']">
       <img src="./assets/img/project/logo.png" [alt]="appName + ' Logo'" class="img-fluid me-2"/>
