--- a/src/app/shared/components/reward-collection-card/reward-collection-card.component.html
+++ b/src/app/shared/components/reward-collection-card/reward-collection-card.component.html
@@ -1,16 +1,16 @@
 <div class="card reward-collection-card-wrapper text-center rounded-4">
-    <div class="card-header border-0 text-dark fw-900 fs-5 bg-transparent">Starbucks</div>
-    <img src="assets/img/project/pick-card.png" class="card-img-top image-fluid mx-auto" alt="card image">
+    <div class="card-header border-0 text-dark fw-900 fs-5 bg-transparent">{{data.title}}</div>
+    <img class="card-img-top image-fluid mx-auto" [src]="data.merchantImageUrl" alt="card image" />
     <div class="card-body text-dark py-1 ">
         <div class="fw-900" [style.font-size]="'12px'">Draw Fee</div>
-        <div class="fs-6 fw-900">50$</div>
+        <div class="fs-6 fw-900">{{data.drawFee}}$</div>
         <div class="mx-auto" [style.width]="'9rem'">
             <image-button [text]="'play now'"></image-button>
         </div>
-        <div class="fs-5 fw-900">Mega Reward</div>
-        <div class="fs-4 fw-900">Lifetime Coffee</div>
+        <div class="fs-5 fw-700">Mega Reward</div>
+        <div class="fs-4 fw-700">Lifetime Coffee</div>
     </div>
     <div class="card-footer border-0 pt-0">
-        <small class="text-dark fw-900">1,244 Rewards Left</small>
+        <small class="text-dark fw-900">{{data.rewardsLeft | number}} Rewards Left</small>
     </div>
 </div>
